# stm32f4-smoltcp-demo

./: Cargo.toml  README.md  memory.x  ptp.py  ptp_listen.py
src/: main.rs  network.rs
