[package]
name = "stm32f4-smoltcp-demo"
version = "0.1.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
panic-abort = "0.3.1"

[dependencies.smoltcp]
version = "0.5.0"
default-features = false
features = ["proto-ipv4", "socket-tcp"]

[dependencies.stm32f4xx-hal]
version = "0.2.3"
features = ["stm32f407", "rt"]

[dependencies.stm32f4-smoltcp]
path = "../stm32f4-smoltcp"

[profile.release]
codegen-units = 1
incremental = false
debug = true
opt-level = "s"
lto = true
