[package]
name = "stm32f4-smoltcp-demo"
version = "0.1.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
edition = "2018"

[patch.crates-io]
smoltcp = { path = "../smoltcp" }

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.8"
panic-halt = "0.2.0"
panic-semihosting = "0.5.1"

[dependencies.smoltcp]
version = "0.5.0"
default-features = false
features = ["proto-ipv4", "socket-udp"]

[dependencies.stm32f4xx-hal]
path = "../stm32f4xx-hal"
features = ["stm32f407", "rt"]

[dependencies.stm32f4-smoltcp]
path = "../stm32f4-smoltcp"

[profile.release]
codegen-units = 1
incremental = false
debug = true
opt-level = "s"
lto = true
